# pylocalauth

./: CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Makefile  README.md  SECURITY.md  pyproject.toml  test_build.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml
pylocalauth/: __init__.py  exceptions.py
tests/: conftest.py  test_linux.py  test_macos.py  test_windows.py
